--- a/src/Mvc.Grid.Web/Views/Grid/Multiple.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/Multiple.cshtml
@@ -1,124 +1,81 @@
-﻿@model IEnumerable<PersonModel>
+﻿@model IEnumerable<Person>
 
 @{
     ViewBag.Title = "MVC.Grid multiple grids on one page";
 }
 
 <div class="row">
-    <div class="col-md-6">
-        <div class="example content-block">
-            <div class="widget">
-                <div class="widget-header">
-                    <h1>
-                        <i class="fa fa-bars"></i>
-                        Multiple grids on one page
-                        <span class="widget-buttons">
-                            <i class="content-toggle"></i>
-                        </span>
-                    </h1>
-                </div>
-                <div class="widget-content">
-                    @(Html
-                        .Grid(Model)
-                        .Build(columns =>
-                        {
-                            columns.Add(model => model.Name).Titled("Name");
-                            columns.Add(model => model.Surname).Titled("Surname");
-
-                            columns.Add(model => model.Age).Titled("Age");
-                            columns.Add(model => model.Birthday).Titled("Birth date");
-                            columns.Add(model => model.IsWorking).Titled("Employed");
-                        })
-                        .Named("First")
-                        .Sortable()
-                    )
-                </div>
+    <div class="widget example col">
+        <div class="widget-header">
+            <div class="fa fa-bars"></div>
+            <span>Multiple grids on one page</span>
+            <div class="widget-buttons">
+                <span class="fa fa-minus content-toggle"></span>
             </div>
         </div>
-    </div>
-    <div class="col-md-6">
-        <div class="example content-block">
-            <div class="widget">
-                <div class="widget-header">
-                    <h1>
-                        <i class="fa fa-bars"></i>
-                        Multiple grids on one page
-                        <span class="widget-buttons">
-                            <i class="content-toggle"></i>
-                        </span>
-                    </h1>
-                </div>
-                <div class="widget-content">
-                    @(Html
-                        .Grid(Model)
-                        .Build(columns =>
-                        {
-                            columns.Add(model => model.Name).Titled("Name");
-                            columns.Add(model => model.Surname).Titled("Surname");
+        <div class="widget-content">
+            @(Html
+                .Grid(Model)
+                .Build(columns =>
+                {
+                    columns.Add(model => model.Name).Titled("Name");
+                    columns.Add(model => model.Surname).Titled("Surname");
+                    columns.Add(model => model.MaritalStatus).Titled("Marital status");
 
-                            columns.Add(model => model.Age).Titled("Age");
-                            columns.Add(model => model.Birthday).Titled("Birth date");
-                            columns.Add(model => model.IsWorking).Titled("Employed");
-                        })
-                        .Named("Second")
-                        .Sortable()
-                    )
-                </div>
+                    columns.Add(model => model.Age).Titled("Age");
+                    columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
+                    columns.Add(model => model.IsWorking).Titled("Employed");
+                })
+                .Empty("No data found")
+                .Named("first")
+                .Filterable()
+                .Sortable()
+            )
+        </div>
+    </div>
+    <div class="widget example col">
+        <div class="widget-header">
+            <div class="fa fa-bars"></div>
+            <span>Multiple grids on one page</span>
+            <div class="widget-buttons">
+                <span class="fa fa-minus content-toggle"></span>
             </div>
+        </div>
+        <div class="widget-content">
+            @(Html
+                .Grid(Model)
+                .Build(columns =>
+                {
+                    columns.Add(model => model.Name).Titled("Name");
+                    columns.Add(model => model.Surname).Titled("Surname");
+                    columns.Add(model => model.MaritalStatus).Titled("Marital status");
+
+                    columns.Add(model => model.Age).Titled("Age");
+                    columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
+                    columns.Add(model => model.IsWorking).Titled("Employed");
+                })
+                .Empty("No data found")
+                .Named("second")
+                .Filterable()
+                .Sortable()
+            )
         </div>
     </div>
 </div>
 
 <div class="row">
-    <div class="col-md-6">
-        <div class="example-code content-block">
-            <div class="widget">
-                <div class="widget-header">
-                    <i class="fa fa-code"></i>
-                    View
-                    <span class="widget-buttons">
-                        <i class="content-toggle"></i>
-                    </span>
-                </div>
-                <div class="widget-content">
-<pre>
-<code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">PersonModel</span>&gt;
-
-@@(Html
-    .Grid(Model)
-    .Build(columns =>
-    {
-        columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>);
-        columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>);
-
-        columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>);
-        columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
-    })
-    .Named(<span class="str">"First"</span>)
-    .Sortable()
-)
-</code>
-</pre>
-                </div>
+    <div class="widget code col">
+        <div class="widget-header">
+            <div class="fa fa-code"></div>
+            <span>View</span>
+            <div class="widget-buttons">
+                <span class="fa fa-minus content-toggle"></span>
             </div>
         </div>
-    </div>
-    <div class="col-md-6">
-        <div class="example-code content-block">
-            <div class="widget">
-                <div class="widget-header">
-                    <i class="fa fa-code"></i>
-                    View
-                    <span class="widget-buttons">
-                        <i class="content-toggle"></i>
-                    </span>
-                </div>
-                <div class="widget-content">
+        <div class="widget-content">
 <pre>
 <code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">PersonModel</span>&gt;
+@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
 
 @@(Html
     .Grid(Model)
@@ -126,18 +83,53 @@
     {
         columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>);
         columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>);
+        columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
         columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
-    .Named(<span class="str">"Second"</span>)
+    .Empty(<span class="str">"No data found"</span>)
+    .Named(<span class="str">"first"</span>)
+    .Filterable()
     .Sortable()
 )
 </code>
 </pre>
-                </div>
+        </div>
+    </div>
+    <div class="widget code col">
+        <div class="widget-header">
+            <div class="fa fa-code"></div>
+            <span>View</span>
+            <div class="widget-buttons">
+                <span class="fa fa-minus content-toggle"></span>
             </div>
+        </div>
+        <div class="widget-content">
+<pre>
+<code>
+@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
+
+@@(Html
+    .Grid(Model)
+    .Build(columns =>
+    {
+        columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>);
+        columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>);
+        columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
+
+        columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
+        columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
+    })
+    .Empty(<span class="str">"No data found"</span>)
+    .Named(<span class="str">"second"</span>)
+    .Filterable()
+    .Sortable()
+)
+</code>
+</pre>
         </div>
     </div>
 </div>
