--- a/src/Mvc.Grid.Web/Views/Javascript/_ReloadEventsGrid.cshtml
+++ b/src/Mvc.Grid.Web/Views/Javascript/_ReloadEventsGrid.cshtml
@@ -10,5 +10,5 @@
 
         columns.Add(model => DateTime.Now).Titled("Time stamp");
     })
-    .WithSourceUrl(Url.Action("ReloadGrid"))
+    .WithSourceUrl(Url.Action("ReloadEventsGrid"))
 )
