--- a/src/Mvc.Grid.Web/Views/Column/Filtering.cshtml
+++ b/src/Mvc.Grid.Web/Views/Column/Filtering.cshtml
@@ -1,49 +1,46 @@
-﻿@model IEnumerable<PersonModel>
+﻿@model IEnumerable<Person>
 
 @{
     ViewBag.Title = "MVC.Grid column value filtering";
 }
 
-<div class="example content-block">
-    <div class="widget">
-        <div class="widget-header">
-            <h1>
-                <i class="fa fa-bars"></i>
-                Filtering column values
-                <span class="widget-buttons">
-                    <i class="content-toggle"></i>
-                </span>
-            </h1>
-        </div>
-        <div class="widget-content">
-            @(Html
-                .Grid(Model)
-                .Build(columns =>
-                {
-                    columns.Add(model => model.Name).Titled("Name").Filterable(true);
-                    columns.Add(model => model.Surname).Titled("Surname").Filterable(false);
-
-                    columns.Add(model => model.Age).Titled("Age");
-                    columns.Add(model => model.Birthday).Titled("Birth date");
-                    columns.Add(model => model.IsWorking).Titled("Employed");
-                })
-            )
+<div class="widget example">
+    <div class="widget-header">
+        <div class="fa fa-bars"></div>
+        <span>Filtering column values</span>
+        <div class="widget-buttons">
+            <span class="fa fa-minus content-toggle"></span>
         </div>
     </div>
+    <div class="widget-content">
+        @(Html
+            .Grid(Model)
+            .Build(columns =>
+            {
+                columns.Add(model => model.Name).Titled("Name").Filterable(true);
+                columns.Add(model => model.Surname).Titled("Surname").Filterable(false);
+                columns.Add(model => model.MaritalStatus).Titled("Marital status").Filterable(true);
+
+                columns.Add(model => model.Age).Titled("Age");
+                columns.Add(model => model.Birthday).Titled("Birth date").Filterable(true);
+                columns.Add(model => model.IsWorking).Titled("Employed").Filterable(true);
+            })
+        )
+    </div>
 </div>
-<div class="example-code content-block">
-    <div class="widget">
-        <div class="widget-header">
-            <i class="fa fa-code"></i>
-            View
-            <span class="widget-buttons">
-                <i class="content-toggle"></i>
-            </span>
+
+<div class="widget code">
+    <div class="widget-header">
+        <div class="fa fa-code"></div>
+        <span>View</span>
+        <div class="widget-buttons">
+            <span class="fa fa-minus content-toggle"></span>
         </div>
-        <div class="widget-content">
+    </div>
+    <div class="widget-content">
 <pre>
 <code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">PersonModel</span>&gt;
+@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
 
 @@(Html
     .Grid(Model)
@@ -51,14 +48,14 @@
     {
         columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>).Filterable(<span class="kwd">true</span>);
         columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>).Filterable(<span class="kwd">false</span>);
+        columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>).Filterable(<span class="kwd">true</span>);
 
         columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>);
-        columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Filterable(<span class="kwd">true</span>);
+        columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>).Filterable(<span class="kwd">true</span>);
     })
 )
 </code>
 </pre>
-        </div>
     </div>
 </div>
