--- a/src/Mvc.Grid.Web/Views/Grid/EmptyText.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/EmptyText.cshtml
@@ -1,51 +1,48 @@
-﻿@model IEnumerable<PersonModel>
+﻿@model IEnumerable<Person>
 
 @{
     ViewBag.Title = "MVC.Grid no data found text";
 }
 
-<div class="example content-block">
-    <div class="widget">
-        <div class="widget-header">
-            <h1>
-                <i class="fa fa-bars"></i>
-                Grid no data found text
-                <span class="widget-buttons">
-                    <i class="content-toggle"></i>
-                </span>
-            </h1>
-        </div>
-        <div class="widget-content">
-            @(Html
-                .Grid(Model)
-                .Build(columns =>
-                {
-                    columns.Add(model => model.Name).Titled("Name");
-                    columns.Add(model => model.Surname).Titled("Surname");
-
-                    columns.Add(model => model.Age).Titled("Age");
-                    columns.Add(model => model.Birthday).Titled("Birth date");
-                    columns.Add(model => model.IsWorking).Titled("Employed");
-                })
-                .Empty("No data found")
-            )
-
+<div class="widget example">
+    <div class="widget-header">
+        <div class="fa fa-bars"></div>
+        <span>Grid no data found text</span>
+        <div class="widget-buttons">
+            <span class="fa fa-minus content-toggle"></span>
         </div>
     </div>
+    <div class="widget-content">
+        @(Html
+            .Grid(Model)
+            .Build(columns =>
+            {
+                columns.Add(model => model.Name).Titled("Name");
+                columns.Add(model => model.Surname).Titled("Surname");
+                columns.Add(model => model.MaritalStatus).Titled("Marital status");
+
+                columns.Add(model => model.Age).Titled("Age");
+                columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
+                columns.Add(model => model.IsWorking).Titled("Employed");
+            })
+            .Empty("No data found")
+        )
+
+    </div>
 </div>
-<div class="example-code content-block">
-    <div class="widget">
-        <div class="widget-header">
-            <i class="fa fa-code"></i>
-            View
-            <span class="widget-buttons">
-                <i class="content-toggle"></i>
-            </span>
+
+<div class="widget code">
+    <div class="widget-header">
+        <div class="fa fa-code"></div>
+        <span>View</span>
+        <div class="widget-buttons">
+            <span class="fa fa-minus content-toggle"></span>
         </div>
-        <div class="widget-content">
+    </div>
+    <div class="widget-content">
 <pre>
 <code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">PersonModel</span>&gt;
+@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
 
 @@(Html
     .Grid(Model)
@@ -53,15 +50,15 @@
     {
         columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>);
         columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>);
+        columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
         columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
     .Empty(<span class="str">"No data found"</span>)
 )
 </code>
 </pre>
-        </div>
     </div>
 </div>
