--- a/src/Mvc.Grid.Web/Views/Grid/HtmlAttributes.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/HtmlAttributes.cshtml
@@ -1,53 +1,48 @@
-﻿@model IEnumerable<PersonModel>
+﻿@model IEnumerable<Person>
 
 @{
     ViewBag.Title = "MVC.Grid table html attributes";
 }
 
-<div class="example content-block">
-    <div class="widget">
-        <div class="widget-header">
-            <h1>
-                <i class="fa fa-bars"></i>
-                Additional grid table attributes
-                <span class="widget-buttons">
-                    <i class="content-toggle"></i>
-                </span>
-            </h1>
+<div class="widget example">
+    <div class="widget-header">
+        <div class="fa fa-bars"></div>
+        <span>Grid with table attributes</span>
+        <div class="widget-buttons">
+            <span class="fa fa-minus content-toggle"></span>
         </div>
-        <div class="widget-content">
-            @(Html
-                .Grid(Model)
-                .Build(columns =>
-                {
-                    columns.Add(model => model.Name).Titled("Name");
-                    columns.Add(model => model.Surname).Titled("Surname");
+    </div>
+    <div class="widget-content">
+        @(Html
+            .Grid(Model)
+            .Build(columns =>
+            {
+                columns.Add(model => model.Name).Titled("Name");
+                columns.Add(model => model.Surname).Titled("Surname");
+                columns.Add(model => model.MaritalStatus).Titled("Marital status");
 
-                    columns.Add(model => model.Age).Titled("Age");
-                    columns.Add(model => model.Birthday).Titled("Birth date");
-                    columns.Add(model => model.IsWorking).Titled("Employed");
-                })
-                .Attributed(new { data_type = "individuals" })
-            )
-        </div>
+                columns.Add(model => model.Age).Titled("Age");
+                columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
+                columns.Add(model => model.IsWorking).Titled("Employed");
+            })
+            .Attributed(new { data_type = "individuals" })
+        )
     </div>
 </div>
 
 <div class="row">
-    <div class="col-md-6">
-        <div class="example-code content-block">
-            <div class="widget">
-                <div class="widget-header">
-                    <i class="fa fa-code"></i>
-                    View
-                    <span class="widget-buttons">
-                        <i class="content-toggle"></i>
-                    </span>
-                </div>
-                <div class="widget-content">
+    <div class="widget code col">
+        <div class="widget-header">
+            <div class="fa fa-code"></div>
+            <span>View</span>
+            <div class="widget-buttons">
+                <span class="fa fa-minus content-toggle"></span>
+            </div>
+        </div>
+        <div class="widget-content">
 <pre>
 <code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">PersonModel</span>&gt;
+@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
 
 @@(Html
     .Grid(Model)
@@ -55,41 +50,36 @@
     {
         columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>);
         columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>);
+        columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
         columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
     .Attributed(<span class="kwd">new</span> { data_type = <span class="str">"individuals"</span> })
 )
 </code>
 </pre>
-                </div>
-            </div>
         </div>
     </div>
-    <div class="col-md-6">
-        <div class="example-code content-block">
-            <div class="widget">
-                <div class="widget-header">
-                    <i class="fa fa-code"></i>
-                    Rendered table
-                    <span class="widget-buttons">
-                        <i class="content-toggle"></i>
-                    </span>
-                </div>
-                <div class="widget-content">
+    <div class="widget code col">
+        <div class="widget-header">
+            <div class="fa fa-code"></div>
+            <span>Rendered grid html</span>
+            <div class="widget-buttons">
+                <span class="fa fa-minus content-toggle"></span>
+            </div>
+        </div>
+        <div class="widget-content">
 <pre>
 <code>
 &lt;div class="mvc-grid"&gt;
-    &lt;table class="table" data-type="individuals"&gt;
+    &lt;table data-type="individuals"&gt;
         ...
     &lt;/table&gt;
 &lt;/div&gt;
 </code>
 </pre>
-                </div>
-            </div>
         </div>
     </div>
 </div>
