--- a/src/Mvc.Grid.Web/Views/Grid/ManualPaging.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/ManualPaging.cshtml
@@ -1,59 +1,54 @@
-﻿@model IEnumerable<PersonModel>
+﻿@model IEnumerable<Person>
 
 @{
     ViewBag.Title = "MVC.Grid manual paging";
 }
 
-<div class="example content-block">
-    <div class="widget">
-        <div class="widget-header">
-            <h1>
-                <i class="fa fa-bars"></i>
-                Manually paged grid
-                <span class="widget-buttons">
-                    <i class="content-toggle"></i>
-                </span>
-            </h1>
+<div class="widget example">
+    <div class="widget-header">
+        <div class="fa fa-bars"></div>
+        <span>Manually paged grid</span>
+        <div class="widget-buttons">
+            <span class="fa fa-minus content-toggle"></span>
         </div>
-        <div class="widget-content">
-            @(Html
-                .Grid(Model)
-                .Build(columns =>
-                {
-                    columns.Add(model => model.Name).Titled("Name");
-                    columns.Add(model => model.Surname).Titled("Surname");
+    </div>
+    <div class="widget-content">
+        @(Html
+            .Grid(Model)
+            .Build(columns =>
+            {
+                columns.Add(model => model.Name).Titled("Name");
+                columns.Add(model => model.Surname).Titled("Surname");
+                columns.Add(model => model.MaritalStatus).Titled("Marital status");
 
-                    columns.Add(model => model.Age).Titled("Age");
-                    columns.Add(model => model.Birthday).Titled("Birth date");
-                    columns.Add(model => model.IsWorking).Titled("Employed");
-                })
-                .Pageable(pager =>
-                {
-                    pager.ProcessorType = GridProcessorType.Manual;
-                    pager.TotalRows = ViewBag.TotalRows;
-                    pager.RowsPerPage = 3;
-                })
-            )
-        </div>
+                columns.Add(model => model.Age).Titled("Age");
+                columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
+                columns.Add(model => model.IsWorking).Titled("Employed");
+            })
+            .Pageable(pager =>
+            {
+                pager.ProcessorType = GridProcessorType.Manual;
+                pager.TotalRows = ViewBag.TotalRows;
+                pager.RowsPerPage = 3;
+            })
+        )
     </div>
 </div>
 
 <div class="row">
-    <div class="col-md-6">
-        <div class="example-code content-block">
-            <div class="widget">
-                <div class="widget-header">
-                    <i class="fa fa-code"></i>
-                    Controller
-                    <span class="widget-buttons">
-                        <i class="content-toggle"></i>
-                    </span>
-                </div>
-                <div class="widget-content">
+    <div class="widget code col">
+        <div class="widget-header">
+            <div class="fa fa-code"></div>
+            <span>Controller</span>
+            <div class="widget-buttons">
+                <span class="fa fa-minus content-toggle"></span>
+            </div>
+        </div>
+        <div class="widget-content">
 <pre>
 <code>
 [<span class="cls">HttpGet</span>]
-<span class="kwd">public</span> <span class="cls">ActionResult</span> Index(<span class="cls">Int32</span>? page, <span class="cls">Int32</span>? rows)
+<span class="kwd">public</span> <span class="cls">ViewResult</span> Index(<span class="cls">Int32</span>? page, <span class="cls">Int32</span>? rows)
 {
     ViewBag.TotalRows = <span class="cls">PeopleRepository</span>.GetPeople().Count();
 
@@ -61,24 +56,20 @@
 }
 </code>
 </pre>
-                </div>
-            </div>
         </div>
     </div>
-    <div class="col-md-6">
-        <div class="example-code content-block">
-            <div class="widget">
-                <div class="widget-header">
-                    <i class="fa fa-code"></i>
-                    View
-                    <span class="widget-buttons">
-                        <i class="content-toggle"></i>
-                    </span>
-                </div>
-                <div class="widget-content">
+    <div class="widget code col">
+        <div class="widget-header">
+            <div class="fa fa-code"></div>
+            <span>View</span>
+            <div class="widget-buttons">
+                <span class="fa fa-minus content-toggle"></span>
+            </div>
+        </div>
+        <div class="widget-content">
 <pre>
 <code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">PersonModel</span>&gt;
+@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
 
 @@(Html
     .Grid(Model)
@@ -86,9 +77,10 @@
     {
         columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>);
         columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>);
+        columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
         columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
     .Pageable(pager =>
@@ -100,8 +92,6 @@
 )
 </code>
 </pre>
-                </div>
-            </div>
         </div>
     </div>
 </div>
