--- a/src/Mvc.Grid.Web/Views/Grid/MultiFiltering.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/MultiFiltering.cshtml
@@ -1,68 +1,67 @@
-﻿@model IEnumerable<PersonModel>
+﻿@model IEnumerable<Person>
 
 @{
     ViewBag.Title = "MVC.Grid multi value filtering";
 }
 
-<div class="example content-block">
-    <div class="widget">
-        <div class="widget-header">
-            <h1>
-                <i class="fa fa-bars"></i>
-                Multi filtering grid values
-                <span class="widget-buttons">
-                    <i class="content-toggle"></i>
-                </span>
-            </h1>
-        </div>
-        <div class="widget-content">
-            @(Html
-                .Grid(Model)
-                .Build(columns =>
-                {
-                    columns.Add(model => model.Name).Titled("Name").MultiFilterable(true);
-                    columns.Add(model => model.Surname).Titled("Surname").MultiFilterable(false);
-
-                    columns.Add(model => model.Age).Titled("Age");
-                    columns.Add(model => model.Birthday).Titled("Birth date");
-                    columns.Add(model => model.IsWorking).Titled("Employed").MultiFilterable(false);
-                })
-                .MultiFilterable()
-                .Filterable()
-            )
+<div class="widget example">
+    <div class="widget-header">
+        <div class="fa fa-bars"></div>
+        <span>Multi filtering grid values</span>
+        <div class="widget-buttons">
+            <span class="fa fa-minus content-toggle"></span>
         </div>
     </div>
+    <div class="widget-content">
+        @(Html
+            .Grid(Model)
+            .Build(columns =>
+            {
+                columns.Add(model => model.Name).Titled("Name");
+                columns.Add(model => model.Surname).Titled("Surname").MultiFilterable(false);
+                columns.Add(model => model.MaritalStatus).Titled("Marital status");
+
+                columns.Add(model => model.Age).Titled("Age");
+                columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
+                columns.Add(model => model.IsWorking).Titled("Employed").MultiFilterable(false);
+            })
+            .Empty("No data found")
+            .MultiFilterable()
+            .Filterable()
+        )
+    </div>
 </div>
-<div class="example-code content-block">
-    <div class="widget">
-        <div class="widget-header">
-            <i class="fa fa-code"></i>
-            View
-            <span class="widget-buttons">
-                <i class="content-toggle"></i>
-            </span>
+
+<div class="widget code">
+    <div class="widget-header">
+        <div class="fa fa-code"></div>
+        <span>View</span>
+        <div class="widget-buttons">
+            <span class="fa fa-minus content-toggle"></span>
         </div>
-        <div class="widget-content">
+    </div>
+    <div class="widget-content">
 <pre>
 <code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">PersonModel</span>&gt;
+@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
 
 @@(Html
     .Grid(Model)
     .Build(columns =>
     {
-        columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>).MultiFilterable(<span class="kwd">true</span>);
+        columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>);
         columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>).MultiFilterable(<span class="kwd">false</span>);
+        columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
         columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>).MultiFilterable(<span class="kwd">false</span>);
     })
+    .Empty(<span class="str">"No data found"</span>)
     .MultiFilterable()
     .Filterable()
 )
 </code>
 </pre>
-        </div>
     </div>
 </div>
