--- a/src/Mvc.Grid.Web/Views/Grid/RowAttributes.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/RowAttributes.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<Person>
 
 @{
-    ViewBag.Title = "MVC.Grid styling";
+    ViewBag.Title = "MVC.Grid row attributes";
 }
 
 <div class="widget example">
     <div class="widget-header">
         <div class="fa fa-bars"></div>
-        <span>Styling grid table</span>
+        <span>Attributed grid rows</span>
         <div class="widget-buttons">
             <span class="fa fa-minus content-toggle"></span>
         </div>
@@ -25,8 +25,7 @@
                 columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
                 columns.Add(model => model.IsWorking).Titled("Employed");
             })
-            .Css("css-classes")
-            .AppendCss("table-hover")
+            .RowAttributed(model => new { data_id = model.Id })
         )
     </div>
 </div>
@@ -57,8 +56,7 @@
         columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
-    .Css(<span class="str">"css-classes"</span>) <span class="com">// Overwrites all classes with the new ones</span>
-    .AppendCss(<span class="str">"table-hover"</span>) <span class="com">// Appends classes to the current ones</span>
+    .RowAttributed(model => <span class="kwd">new</span> { data_id = model.Id })
 )
 </code>
 </pre>
@@ -67,7 +65,7 @@
     <div class="widget code col">
         <div class="widget-header">
             <div class="fa fa-code"></div>
-            <span>Css</span>
+            <span>Javascript</span>
             <div class="widget-buttons">
                 <span class="fa fa-minus content-toggle"></span>
             </div>
@@ -75,11 +73,11 @@
         <div class="widget-content">
 <pre>
 <code>
-&lt;style&gt;
-    .table-hover tbody tr:hover {
-        background-color: rgba(0, 0, 0, 0.075);
+$(<span class="str">'.mvc-grid'</span>).mvcgrid({
+    rowClicked: <span class="kwd">function</span> (row, data, e) {
+        console.log($(row).data(<span class="str">'id'</span>));
     }
-&lt;/style&gt;
+});
 </code>
 </pre>
         </div>
@@ -87,7 +85,17 @@
 </div>
 
 <style>
-    table tbody tr {
+    .mvc-grid tbody tr {
         cursor: pointer;
     }
 </style>
+
+@section scripts {
+    <script>
+        $('.mvc-grid').mvcgrid({
+            rowClicked: function (row) {
+                console.log($(row).data('id'));
+            }
+        });
+    </script>
+}
