--- a/src/Mvc.Grid.Web/Views/Grid/_SourceUrlGrid.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/_SourceUrlGrid.cshtml
@@ -12,5 +12,13 @@
         columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
         columns.Add(model => model.IsWorking).Titled("Employed");
     })
+    .WithSourceUrl(Url.Action("SourceUrl", "Grid"))
+    .Empty("No data found")
+    .Pageable(pager =>
+    {
+        pager.PagesToDisplay = 3;
+        pager.RowsPerPage = 2;
+    })
+    .Filterable()
     .Sortable()
 )
