--- a/src/Mvc.Grid.Web/Views/Javascript/Api.cshtml
+++ b/src/Mvc.Grid.Web/Views/Javascript/Api.cshtml
@@ -1,55 +1,51 @@
-﻿@model IEnumerable<PersonModel>
+﻿@model IEnumerable<Person>
 
 @{
     ViewBag.Title = "MVC.Grid javascript API";
 }
 
-<div class="example content-block">
-    <div class="widget">
-        <div class="widget-header">
-            <h1>
-                <i class="fa fa-bars"></i>
-                Grid javascript configuration api
-                <span class="widget-buttons">
-                    <i class="content-toggle"></i>
-                </span>
-            </h1>
+<div class="widget example">
+    <div class="widget-header">
+        <div class="fa fa-bars"></div>
+        <span>Grid javascript configuration api</span>
+        <div class="widget-buttons">
+            <span class="fa fa-minus content-toggle"></span>
         </div>
-        <div class="widget-content">
-            @(Html
-                .Grid(Model)
-                .Build(columns =>
-                {
-                    columns.Add(model => model.Name).Titled("Name");
-                    columns.Add(model => model.Surname).Titled("Surname");
+    </div>
+    <div class="widget-content">
+        @(Html
+            .Grid(Model)
+            .Build(columns =>
+            {
+                columns.Add(model => model.Name).Titled("Name");
+                columns.Add(model => model.Surname).Titled("Surname");
+                columns.Add(model => model.MaritalStatus).Titled("Marital status");
 
-                    columns.Add(model => model.Age).Titled("Age");
-                    columns.Add(model => model.Birthday).Titled("Birth date");
-                    columns.Add(model => model.IsWorking).Titled("Employed");
-                })
-                .Pageable(pager =>
-                {
-                    pager.RowsPerPage = 4;
-                })
-                .Filterable()
-                .Sortable()
-            )
-        </div>
+                columns.Add(model => model.Age).Titled("Age");
+                columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
+                columns.Add(model => model.IsWorking).Titled("Employed");
+            })
+            .Pageable(pager =>
+            {
+                pager.RowsPerPage = 4;
+            })
+            .Empty("No data found")
+            .Filterable()
+            .Sortable()
+        )
     </div>
 </div>
 
 <div class="row">
-    <div class="col-md-6">
-        <div class="example-code content-block">
-            <div class="widget">
-                <div class="widget-header">
-                    <i class="fa fa-code"></i>
-                    Javascript configuration
-                    <span class="widget-buttons">
-                        <i class="content-toggle"></i>
-                    </span>
-                </div>
-                <div class="widget-content">
+    <div class="widget code col">
+        <div class="widget-header">
+            <div class="fa fa-code"></div>
+            <span>Javascript configuration</span>
+            <div class="widget-buttons">
+                <span class="fa fa-minus content-toggle"></span>
+            </div>
+        </div>
+        <div class="widget-content">
 <pre>
 <code>
 $(<span class="str">'.mvc-grid'</span>).mvcgrid({
@@ -63,6 +59,8 @@ $(<span class="str">'.mvc-grid'</span>).mvcgrid({
         <span class="com">// Grid filters to extend or use</span>
         <span class="str">'Boolean'</span>: <span class="kwd">new</span> CustomBooleanFilter()
     },
+    loadingDelay: 300, <span class="com">// Loading block visiblity delay on ajax grid</span>
+    showLoading: true, <span class="com">// Indicates if grid loading block should be shown after loading delay</span>
     reload: <span class="kwd">false</span>, <span class="com">// Grid reload indicator</span>
     rowClicked: <span class="kwd">function</span>(row, data, e) {
         <span class="com">// this - grid instance which invoked the event</span>
@@ -83,21 +81,18 @@ $(<span class="str">'.mvc-grid'</span>).mvcgrid({
 });
 </code>
 </pre>
-                </div>
-            </div>
         </div>
     </div>
-    <div class="col-md-6">
-        <div class="example-code content-block">
-            <div class="widget">
-                <div class="widget-header">
-                    <i class="fa fa-code"></i>
-                    Javascript methods
-                    <span class="widget-buttons">
-                        <i class="content-toggle"></i>
-                    </span>
+    <div class="col">
+        <div class="widget code">
+            <div class="widget-header">
+                <div class="fa fa-code"></div>
+                <span>Javascript methods</span>
+                <div class="widget-buttons">
+                    <span class="fa fa-minus content-toggle"></span>
                 </div>
-                <div class="widget-content">
+            </div>
+            <div class="widget-content">
 <pre>
 <code>
 <span class="com">// Returns grid's javascript instance</span>
@@ -107,19 +102,17 @@ $(<span class="str">'.mvc-grid'</span>).mvcgrid(<span class="str">'instance'</sp
 $(<span class="str">'.mvc-grid'</span>).mvcgrid(<span class="str">'reload'</span>);
 </code>
 </pre>
-                </div>
             </div>
         </div>
-        <div class="example-code content-block">
-            <div class="widget">
-                <div class="widget-header">
-                    <i class="fa fa-code"></i>
-                    Javascript events
-                    <span class="widget-buttons">
-                        <i class="content-toggle"></i>
-                    </span>
+        <div class="widget code">
+            <div class="widget-header">
+                <div class="fa fa-code"></div>
+                <span>Javascript events</span>
+                <div class="widget-buttons">
+                    <span class="fa fa-minus content-toggle"></span>
                 </div>
-                <div class="widget-content">
+            </div>
+            <div class="widget-content">
 <pre>
 <code>
 <span class="com">// Triggered when grid's row is clicked</span>
@@ -141,7 +134,7 @@ $(document).on(<span class="str">'reloadEnded'</span>, <span class="str">'.mvc-g
     <span class="com">e - grid's reload ended event, generated through jQuery's trigger function.</span>
     <span class="com">grid - grid's instance.</span>
 });
-    
+
 <span class="com">// Triggered after grid reload fails</span>
 $(document).on(<span class="str">'reloadFailed'</span>, <span class="str">'.mvc-grid'</span>, <span class="kwd">function</span> (e, grid, result) {
     <span class="com">e - grid's reload failed event, generated through jQuery's trigger function.</span>
@@ -150,7 +143,6 @@ $(document).on(<span class="str">'reloadFailed'</span>, <span class="str">'.mvc-
 });
 </code>
 </pre>
-                </div>
             </div>
         </div>
     </div>
