--- a/src/Mvc.Grid.Web/Views/Javascript/RowClicked.cshtml
+++ b/src/Mvc.Grid.Web/Views/Javascript/RowClicked.cshtml
@@ -1,106 +1,91 @@
-﻿@model IEnumerable<PersonModel>
+﻿@model IEnumerable<Person>
 
 @{
     ViewBag.Title = "MVC.Grid row clicked event binding";
 }
 
 <div class="row">
-    <div class="col-md-6">
-        <div class="example content-block">
-            <div class="widget">
-                <div class="widget-header">
-                    <h1>
-                        <i class="fa fa-bars"></i>
-                        Binding row clicked event
-                        <span class="widget-buttons">
-                            <i class="content-toggle"></i>
-                        </span>
-                    </h1>
-                </div>
-                <div class="widget-content">
-                    @(Html
-                        .Grid(Model)
-                        .Build(columns =>
-                        {
-                            columns.Add(model => model.Name).Titled("Name").Filterable(true);
-                            columns.Add(model => model.Birthday).Titled("Birth date");
-                        })
-                        .Pageable(pager =>
-                        {
-                            pager.RowsPerPage = 3;
-                        })
-                    )
-                </div>
+    <div class="widget example col">
+        <div class="widget-header">
+            <div class="fa fa-bars"></div>
+            <span>Binding row clicked event</span>
+            <div class="widget-buttons">
+                <span class="fa fa-minus content-toggle"></span>
             </div>
         </div>
+        <div class="widget-content">
+            @(Html
+                .Grid(Model)
+                .Build(columns =>
+                {
+                    columns.Add(model => model.Name).Titled("Name").Filterable(true);
+                    columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
+                })
+                .Pageable(pager =>
+                {
+                    pager.RowsPerPage = 3;
+                })
+                .Sortable()
+            )
+        </div>
     </div>
-    <div class="col-md-6">
-        <div class="output content-block">
-            <div class="widget">
-                <div class="widget-header">
-                    <i class="fa fa-code"></i>
-                    Script output
-                    <span class="widget-buttons">
-                        <i class="content-toggle"></i>
-                    </span>
-                </div>
-                <div class="widget-content">
+    <div class="widget console col">
+        <div class="widget-header">
+            <div class="fa fa-angle-right"></div>
+            <span>Script output</span>
+            <div class="widget-buttons">
+                <span class="fa fa-minus content-toggle"></span>
+            </div>
+        </div>
+        <div class="widget-content">
 <pre>
 <code class="script-output">
-
 </code>
 </pre>
-                </div>
-            </div>
         </div>
     </div>
 </div>
 
 <div class="row">
-    <div class="col-md-6">
-        <div class="example-code content-block">
-            <div class="widget">
-                <div class="widget-header">
-                    <i class="fa fa-code"></i>
-                    View
-                    <span class="widget-buttons">
-                        <i class="content-toggle"></i>
-                    </span>
-                </div>
-                <div class="widget-content">
+    <div class="widget code col">
+        <div class="widget-header">
+            <div class="fa fa-code"></div>
+            <span>View</span>
+            <div class="widget-buttons">
+                <span class="fa fa-minus content-toggle"></span>
+            </div>
+        </div>
+        <div class="widget-content">
 <pre>
 <code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">PersonModel</span>&gt;
+@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
 
 @@(Html
     .Grid(Model)
     .Build(columns =>
     {
         columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>).Filterable(<span class="kwd">true</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
     })
     .Pageable(pager =>
     {
         pager.RowsPerPage = 3;
     })
+    .Sortable()
 )
 </code>
 </pre>
-                </div>
-            </div>
         </div>
     </div>
-    <div class="col-md-6">
-        <div class="example-code content-block">
-            <div class="widget">
-                <div class="widget-header">
-                    <i class="fa fa-code"></i>
-                    Javascript
-                    <span class="widget-buttons">
-                        <i class="content-toggle"></i>
-                    </span>
-                </div>
-                <div class="widget-content">
+    <div class="widget code col">
+        <div class="widget-header">
+            <div class="fa fa-code"></div>
+            <span>Javascript</span>
+            <div class="widget-buttons">
+                <span class="fa fa-minus content-toggle"></span>
+            </div>
+        </div>
+        <div class="widget-content">
 <pre>
 <code>
 $(<span class="str">'.mvc-grid'</span>).mvcgrid({
@@ -122,15 +107,13 @@ $(<span class="str">'.mvc-grid tr'</span>).on(<span class="str">'rowclick'</span
 });
 </code>
 </pre>
-                </div>
-            </div>
         </div>
     </div>
 </div>
 
 <style>
     .selected {
-        background-color: #F5F5F5;
+        background-color: rgba(0, 0, 0, 0.075);
     }
 
     .mvc-grid tbody tr {
@@ -139,70 +122,82 @@ $(<span class="str">'.mvc-grid tr'</span>).on(<span class="str">'rowclick'</span
 </style>
 
 @section scripts {
-<script>
-    $('.mvc-grid').mvcgrid({
-        rowClicked: function (row, data, e) {
-            $(row).siblings().removeClass('selected');
-            $(row).toggleClass('selected');
+    <script>
+        $('.mvc-grid').mvcgrid({
+            rowClicked: function (row, data) {
+                $(row).siblings().removeClass('selected');
+                $(row).toggleClass('selected');
+                console.log(this);
+                if ($(row).hasClass('selected')) {
+                    var rowData = [];
+                    var columnHtml = [];
 
-            if ($(row).hasClass('selected')) {
-                var rowData = [];
-                var columnHtml = [];
-
-                for (var key in data) {
-                    rowData.push('    "' + key + '": "' + data[key] + '"');
-                }
-                for (var i = 0; i < this.columns.length; i++) {
-                    if (this.columns[i].filter) {
-                        columnHtml.push(
-                            '\n' +
-                            '        {\n' +
-                            '            "name": "' + this.columns[i].name + '",\n' +
-                            '            "filter": {\n' +
-                            '                "isMulti": ' + this.columns[i].filter.isMulti + ',\n' +
-                            '                "name": "' + this.columns[i].filter.name + '",\n' +
-                            '                "operator": "' + this.columns[i].filter.operator + '",\n' +
-                            '                "first": {\n' +
-                            '                    "type": "' + this.columns[i].filter.first.type + '",\n' +
-                            '                    "val": "' + this.columns[i].filter.first.val + '"\n' +
-                            '                },\n' +
-                            '                "second": {\n' +
-                            '                    "type": "' + this.columns[i].filter.second.type + '",\n' +
-                            '                    "val": "' + this.columns[i].filter.second.val + '"\n' +
-                            '                }\n' +
-                            '            }\n' +
-                            '        }');
-                    } else {
-                        columnHtml.push(
-                            '\n' +
-                            '        {\n' +
-                            '            "name": "' + this.columns[i].name + '",\n' +
-                            '            "filter": null\n' +
-                            '        }');
+                    for (var key in data) {
+                        rowData.push('    "' + key + '": "' + data[key] + '"');
                     }
+                    for (var i = 0; i < this.columns.length; i++) {
+                        if (this.columns[i].filter) {
+                            columnHtml.push(
+                                '\n' +
+                                '        {\n' +
+                                '            "name": "' + this.columns[i].name + '",\n' +
+                                '            "filter": {\n' +
+                                '                "name": "' + this.columns[i].filter.name + '",\n' +
+                                '                "operator": "' + this.columns[i].filter.operator + '",\n' +
+                                '                "isMulti": ' + this.columns[i].filter.isMulti + ',\n' +
+                                '                "hasOptions": ' + this.columns[i].filter.hasOptions + ',\n' +
+                                '                "first": {\n' +
+                                '                    "method": "' + this.columns[i].filter.first.method + '",\n' +
+                                '                    "value": "' + this.columns[i].filter.first.value + '"\n' +
+                                '                },\n' +
+                                '                "second": {\n' +
+                                '                    "method": "' + this.columns[i].filter.second.method + '",\n' +
+                                '                    "value": "' + this.columns[i].filter.second.value + '"\n' +
+                                '                }\n' +
+                                '            },\n' +
+                                '            "sort": {\n' +
+                                '               "order": "' + this.columns[i].sort.order + '",\n' +
+                                '               "firstsOrder": "' + this.columns[i].sort.firstOrder + '",\n' +
+                                '            }\n' +
+                                '        }');
+                        } else {
+                            columnHtml.push(
+                                '\n' +
+                                '        {\n' +
+                                '            "name": "' + this.columns[i].name + '",\n' +
+                                '            "filter": null,\n' +
+                                '            "sort": {\n' +
+                                '               "order": "' + this.columns[i].sort.order + '",\n' +
+                                '               "firstsOrder": "' + this.columns[i].sort.firstOrder + '",\n' +
+                                '            }\n' +
+                                '        }');
+                        }
+                    }
+
+                    var rowHtml = '\ndata: {\n' + rowData.join(',\n') + '\n}';
+                    var gridHtml =
+                        'grid: {\n' +
+                        '    "name": "' + this.name + '",\n' +
+                        '    "loadingDelay": "' + (this.loadingDelay || '') + '",\n' +
+                        '    "requestType": "' + this.requestType + '",\n' +
+                        '    "filterMode": "' + this.filterMode + '",\n' +
+                        '    "query": "' + this.query + '",\n' +
+                        '    "columns": [' +
+                                columnHtml.join(',') + '\n' +
+                        '    ]\n' +
+                        '    "pager": {\n' +
+                        '        "currentPage": "' + this.pager.currentPage + '",\n' +
+                        '        "element": $Query pager element,\n' +
+                        '        "pages": $Query pager page elements,\n' +
+                        '        "rowsPerPage": $Query rows per page element,\n' +
+                        '    }\n' +
+                        '}\n';
+
+                    $('.script-output').html(rowHtml + '\n' + gridHtml);
+                } else {
+                    $('.script-output').html('');
                 }
-
-
-                var rowHtml = 'data: {\n' + rowData.join(',\n') + '\n}';
-                var gridHtml =
-                    'grid: {\n' +
-                    '    "name": "' + this.name + '",\n' +
-                    '    "columns": [' +
-                            columnHtml.join(',') + '\n' +
-                    '    ]\n' +
-                    '    "pager": {\n' +
-                    '        "currentPage": "' + this.pager.currentPage + '",\n' +
-                    '        "element": $Query pager element,\n' +
-                    '        "pages": $Query pager page elements,\n' +
-                    '        "rowsPerPage": $Query rows per page element,\n' +
-                    '    }\n' +
-                    '}';
-
-                $('.script-output').html(rowHtml + '\n' + gridHtml);
-            } else {
-                $('.script-output').html('');
             }
-        }
-    });
-</script>
+        });
+    </script>
 }
