--- a/src/Mvc.Grid.Web/Views/Pager/PageSizes.cshtml
+++ b/src/Mvc.Grid.Web/Views/Pager/PageSizes.cshtml
@@ -1,16 +1,14 @@
-﻿@using NonFactors.Mvc.Grid.Web.Processors;
-
-@model IEnumerable<Person>
+﻿@model IEnumerable<Person>
 
 @{
-    ViewBag.Title = "MVC.Grid row processing";
+    ViewBag.Title = "MVC.Grid pager rows per page sizes";
 }
 
 <div class="row">
     <div class="widget example col">
         <div class="widget-header">
             <div class="fa fa-bars"></div>
-            <span>Pre-processing grid rows</span>
+            <span>Pager with rows per page selection</span>
             <div class="widget-buttons">
                 <span class="fa fa-minus content-toggle"></span>
             </div>
@@ -22,19 +20,26 @@
                 {
                     columns.Add(model => model.Name).Titled("Name");
                     columns.Add(model => model.Surname).Titled("Surname");
+                    columns.Add(model => model.MaritalStatus).Titled("Marital status");
 
                     columns.Add(model => model.Age).Titled("Age");
                     columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
                     columns.Add(model => model.IsWorking).Titled("Employed");
                 })
-                .ProcessWith(new NotWorkingPersonFilter())
+                .Pageable(pager =>
+                {
+                    pager.PageSizes = new Dictionary<Int32, String> { { 0, "All" }, { 2, "2" }, { 4, "4" } };
+                    pager.ShowPageSizes = true;
+                    pager.RowsPerPage = 2;
+                })
+                .Named("select")
             )
         </div>
     </div>
     <div class="widget example col">
         <div class="widget-header">
             <div class="fa fa-bars"></div>
-            <span>Post-processing grid rows</span>
+            <span>Pager with rows per page input</span>
             <div class="widget-buttons">
                 <span class="fa fa-minus content-toggle"></span>
             </div>
@@ -44,13 +49,21 @@
                 .Grid(Model)
                 .Build(columns =>
                 {
-                    columns.Add(model => model.Name).Titled("N. Surname");
+                    columns.Add(model => model.Name).Titled("Name");
+                    columns.Add(model => model.Surname).Titled("Surname");
+                    columns.Add(model => model.MaritalStatus).Titled("Marital status");
 
                     columns.Add(model => model.Age).Titled("Age");
                     columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
                     columns.Add(model => model.IsWorking).Titled("Employed");
                 })
-                .ProcessWith(new ShortNameProcessor())
+                .Pageable(pager =>
+                {
+                    pager.ShowPageSizes = true;
+                    pager.PageSizes.Clear();
+                    pager.RowsPerPage = 2;
+                })
+                .Named("input")
             )
         </div>
     </div>
@@ -76,12 +89,18 @@
     {
         columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>);
         columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>);
+        columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
         columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
         columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
-    .ProcessWith(<span class="kwd">new</span> <span class="cls">NotWorkingPersonFilter</span>())
+    .Pageable(pager =>
+    {
+        pager.PageSizes = <span class="kwd">new</span> <span class="cls">Dictionary</span><span class="cls">Int32</span>, <span class="cls">String</span>> { { 0, <span class="str">"All"</span> }, { 2, <span class="str">"2"</span> }, { 4, <span class="str">"4"</span> } };
+        pager.ShowPageSizes = <span class="kwd">true</span>;
+        pager.RowsPerPage = 2;
+    })
 )
 </code>
 </pre>
@@ -104,15 +123,21 @@
     .Grid(Model)
     .Build(columns =>
     {
-        columns.Add(model => model.Name).Titled(<span class="str">"N. Surname"</span>);
+        columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>);
+        columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>);
+        columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
         columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
         columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
-    .ProcessWith(<span class="kwd">new</span> <span class="cls">ShortNameProcessor</span>())
+    .Pageable(pager =>
+    {
+        pager.ShowPageSizes = <span class="kwd">true</span>;
+        pager.PageSizes.Clear();
+        pager.RowsPerPage = 2;
+    })
 )
-
 </code>
 </pre>
         </div>
@@ -120,7 +145,7 @@
     <div class="widget code col">
         <div class="widget-header">
             <div class="fa fa-code"></div>
-            <span>Not working person filter</span>
+            <span>Controller</span>
             <div class="widget-buttons">
                 <span class="fa fa-minus content-toggle"></span>
             </div>
@@ -128,62 +153,13 @@
         <div class="widget-content">
 <pre>
 <code>
-<span class="kwd">public class</span> <span class="cls">NotWorkingPersonFilter</span> : <span class="cls">IGridProcessor</span>&lt;<span class="cls">Person</span>&gt;
+[<span class="cls">HttpGet</span>]
+<span class="kwd">public</span> <span class="cls">ViewResult</span> Index()
 {
-    <span class="kwd">public</span> <span class="cls">GridProcessorType</span> ProcessorType { <span class="kwd">get</span>; <span class="kwd">set</span>; }
+    <span class="kwd">using</span> (<span class="cls">DbContext</span> context = <span class="kwd">new</span> <span class="cls">ApplicationContext</span>())
+        <span class="kwd">return</span> View(context.Set&lt;<span class="cls">Person</span>&gt;().OrderBy(model => model.Id));
 
-    <span class="kwd">public</span> NotWorkingPersonFilter()
-    {
-        ProcessorType = <span class="cls">GridProcessorType</span>.Pre;
-        <span class="com">// Executed on all the data, mainly for filtering/sorting in a custom way</span>
-    }
-
-    <span class="kwd">public</span> <span class="cls">IQueryable</span>&lt;<span class="cls">Person</span>&gt; Process(<span class="cls">IQueryable</span>&lt;<span class="cls">Person</span>&gt; items)
-    {
-        <span class="kwd">return</span> items.Where(item => item.IsWorking == <span class="kwd">false</span>);
-    }
-}
-</code>
-</pre>
-        </div>
-    </div>
-    <div class="widget code col">
-        <div class="widget-header">
-            <div class="fa fa-code"></div>
-            <span>Short name processor</span>
-            <div class="widget-buttons">
-                <span class="fa fa-minus content-toggle"></span>
-            </div>
-        </div>
-        <div class="widget-content">
-<pre>
-<code>
-<span class="kwd">public class</span> <span class="cls">ShortNameProcessor</span> : <span class="cls">IGridProcessor</span>&lt;<span class="cls">Person</span>&gt;
-{
-    <span class="kwd">public</span> <span class="cls">GridProcessorType</span> ProcessorType { <span class="kwd">get</span>; <span class="kwd">set</span>; }
-
-    <span class="kwd">public</span> ShortNameProcessor()
-    {
-        ProcessorType = <span class="cls">GridProcessorType</span>.Post;
-        <span class="com">// Executed after data is filtered and sorted, mainly for paging in a custom way</span>
-    }
-
-    <span class="kwd">public</span> <span class="cls">IQueryable</span>&lt;<span class="cls">Person</span>&gt; Process(<span class="cls">IQueryable</span>&lt;<span class="cls">Person</span>&gt; items)
-    {
-        <span class="kwd">return</span> items.Select(person => <span class="kwd">new</span> <span class="cls">Person</span>
-        {
-            Id = person.Id,
-            Name = person.Name.Substring(0, 1) + <span class="str">". "</span> + person.Surname,
-            Surname = person.Surname,
-
-            Age = person.Age,
-            Birthday = person.Birthday,
-            IsWorking = person.IsWorking,
-            MaritalStatus = person.MaritalStatus,
-
-            Children = person.Children
-        });
-    }
+    <span class="com">// Has to be ordered in database query scenarios for paging to work!</span>
 }
 </code>
 </pre>
